[package]
name = "burge"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1.0.128"
rand = "0.8.5"
glium = "0.26.0-alpha3"
glutin = "0.26.0-alpha3"
image = "0.25.2"
serde = { version = "1.0.210", features = ["derive"] }
itertools = "0.13.0"



[dependencies.uuid]
version = "1.10.0"
features = ["v4", "fast-rng", "macro-diagnostics"]

